// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JAutocomplete JAutocomplete method close 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
  "selector": Object {
    "$_vueTestUtils_original": [Circular],
    "_Ctor": Object {
      "359": [Function],
    },
    "beforeDestroy": [Function],
    "components": Object {
      "JAutocompleteSuggest": Object {
        "_Ctor": Object {
          "1": [Function],
          "101": [Function],
          "11": [Function],
          "111": [Function],
          "121": [Function],
          "131": [Function],
          "141": [Function],
          "151": [Function],
          "167": [Function],
          "183": [Function],
          "193": [Function],
          "203": [Function],
          "21": [Function],
          "213": [Function],
          "223": [Function],
          "239": [Function],
          "255": [Function],
          "265": [Function],
          "275": [Function],
          "285": [Function],
          "295": [Function],
          "31": [Function],
          "311": [Function],
          "327": [Function],
          "343": [Function],
          "359": [Function],
          "41": [Function],
          "51": [Function],
          "61": [Function],
          "71": [Function],
          "81": [Function],
          "91": [Function],
        },
        "components": Object {
          "JScrollbar": Object {
            "_Ctor": Object {
              "1": [Function],
              "101": [Function],
              "11": [Function],
              "111": [Function],
              "121": [Function],
              "131": [Function],
              "141": [Function],
              "151": [Function],
              "167": [Function],
              "183": [Function],
              "193": [Function],
              "203": [Function],
              "21": [Function],
              "213": [Function],
              "223": [Function],
              "239": [Function],
              "255": [Function],
              "265": [Function],
              "275": [Function],
              "285": [Function],
              "295": [Function],
              "31": [Function],
              "311": [Function],
              "327": [Function],
              "343": [Function],
              "359": [Function],
              "41": [Function],
              "51": [Function],
              "61": [Function],
              "71": [Function],
              "81": [Function],
              "91": [Function],
            },
            "components": Object {
              "Bar": Object {
                "_Ctor": Object {
                  "1": [Function],
                  "101": [Function],
                  "11": [Function],
                  "111": [Function],
                  "121": [Function],
                  "131": [Function],
                  "141": [Function],
                  "151": [Function],
                  "167": [Function],
                  "183": [Function],
                  "193": [Function],
                  "203": [Function],
                  "21": [Function],
                  "213": [Function],
                  "223": [Function],
                  "239": [Function],
                  "255": [Function],
                  "265": [Function],
                  "275": [Function],
                  "285": [Function],
                  "295": [Function],
                  "31": [Function],
                  "311": [Function],
                  "327": [Function],
                  "343": [Function],
                  "359": [Function],
                  "41": [Function],
                  "51": [Function],
                  "61": [Function],
                  "71": [Function],
                  "81": [Function],
                  "91": [Function],
                },
                "computed": Object {
                  "bar": [Function],
                },
                "props": Object {
                  "vertical": Object {
                    "type": [Function],
                  },
                },
                "render": [Function],
              },
            },
            "computed": Object {
              "wrap": [Function],
            },
            "data": [Function],
            "methods": Object {
              "handleScroll": [Function],
            },
            "name": "JScrollbar",
            "props": Object {
              "tag": Object {
                "default": "div",
                "type": [Function],
              },
              "viewClass": Object {},
              "wrapClass": Object {},
            },
            "render": [Function],
          },
        },
        "created": [Function],
        "data": [Function],
        "mixins": Array [
          Object {
            "beforeDestroy": [Function],
            "data": [Function],
            "methods": Object {
              "appendArrow": [Function],
              "createPopper": [Function],
              "destroyPopper": [Function],
              "updatePopper": [Function],
            },
            "props": Object {
              "appendToBody": Object {
                "default": true,
                "type": [Function],
              },
              "offset": Object {
                "default": [Function],
                "type": [Function],
              },
              "placement": Object {
                "default": "bottom",
                "type": [Function],
              },
              "visibleArrow": Object {
                "default": true,
                "type": [Function],
              },
            },
            "watch": Object {
              "showPopper": Object {
                "handler": [Function],
                "user": true,
              },
            },
          },
        ],
        "mounted": [Function],
        "name": "JAutocompleteSuggest",
        "render": [Function],
        "updated": [Function],
      },
      "JInput": Object {
        "_Ctor": Object {
          "1": [Function],
          "101": [Function],
          "11": [Function],
          "111": [Function],
          "121": [Function],
          "131": [Function],
          "141": [Function],
          "151": [Function],
          "167": [Function],
          "183": [Function],
          "193": [Function],
          "203": [Function],
          "21": [Function],
          "213": [Function],
          "223": [Function],
          "239": [Function],
          "255": [Function],
          "265": [Function],
          "275": [Function],
          "285": [Function],
          "295": [Function],
          "31": [Function],
          "311": [Function],
          "327": [Function],
          "343": [Function],
          "359": [Function],
          "41": [Function],
          "51": [Function],
          "61": [Function],
          "71": [Function],
          "81": [Function],
          "91": [Function],
        },
        "computed": Object {
          "inputDisabled": [Function],
          "inputReadonly": [Function],
          "inputSize": [Function],
          "nativeInputValue": [Function],
          "showClear": [Function],
          "showPasswordVisible": [Function],
        },
        "data": [Function],
        "inheritAttrs": false,
        "install": [Function],
        "methods": Object {
          "blur": [Function],
          "calcIconOffset": [Function],
          "focus": [Function],
          "getInput": [Function],
          "handleBlur": [Function],
          "handleChange": [Function],
          "handleClear": [Function],
          "handleCompositionEnd": [Function],
          "handleCompositionStart": [Function],
          "handleFocus": [Function],
          "handleInput": [Function],
          "handlePasswordVisible": [Function],
          "setNativeInputValue": [Function],
          "updateIconOffset": [Function],
        },
        "mounted": [Function],
        "name": "JInput",
        "props": Object {
          "clearable": Object {
            "default": false,
            "type": [Function],
          },
          "disabled": Object {
            "default": false,
            "type": [Function],
          },
          "readonly": Object {
            "default": false,
            "type": [Function],
          },
          "round": Object {
            "default": false,
            "type": [Function],
          },
          "showPassword": Object {
            "default": false,
            "type": [Function],
          },
          "size": Object {
            "type": [Function],
          },
          "tabindex": Object {
            "type": [Function],
          },
          "type": Object {
            "default": "text",
            "type": [Function],
          },
          "value": Object {
            "type": Array [
              [Function],
              [Function],
            ],
          },
        },
        "render": [Function],
        "updated": [Function],
        "watch": Object {
          "nativeInputValue": [Function],
        },
      },
    },
    "computed": Object {
      "autocompleteSize": [Function],
      "suggestVisible": [Function],
    },
    "data": [Function],
    "directives": Object {
      "clickoutside": Object {
        "bind": [Function],
        "unbind": [Function],
      },
    },
    "inheritAttrs": false,
    "install": [Function],
    "methods": Object {
      "close": [Function],
      "getData": [Function],
      "getInput": [Function],
      "getSlots": [Function],
      "handleBlur": [Function],
      "handleChange": [Function],
      "handleFocus": [Function],
      "select": [Function],
    },
    "mixins": Array [
      Object {
        "methods": Object {
          "broadcast": [Function],
          "dispatch": [Function],
        },
      },
    ],
    "mounted": [Function],
    "name": "JAutocomplete",
    "props": Object {
      "appendToBody": Object {
        "default": true,
        "type": [Function],
      },
      "debounce": Object {
        "default": 300,
        "type": [Function],
      },
      "disabled": Object {
        "type": [Function],
      },
      "fetchSuggest": Object {
        "required": true,
        "type": [Function],
      },
      "placement": Object {
        "default": "bottom",
        "type": [Function],
      },
      "readonly": Object {
        "type": [Function],
      },
      "round": Object {
        "type": [Function],
      },
      "size": Object {
        "type": [Function],
      },
      "value": Object {
        "type": Array [
          [Function],
          [Function],
        ],
      },
      "valueKey": Object {
        "default": "value",
        "type": [Function],
      },
      "visibleArrow": Object {
        "default": true,
        "type": [Function],
      },
    },
    "render": [Function],
    "watch": Object {
      "suggestVisible": [Function],
    },
  },
}
`;

exports[`JAutocomplete appendToBody no pass appendToBody 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete appendToBody pass appendToBody is false 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete blur event blur 1`] = `
VueWrapper {
  "_emitted": Object {
    "blur": Array [
      Array [
        FocusEvent {
          "isTrusted": false,
        },
      ],
    ],
  },
  "_emittedByOrder": Array [
    Object {
      "args": Array [
        FocusEvent {
          "isTrusted": false,
        },
      ],
      "name": "blur",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete create create 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete debounce no pass debounce 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete debounce pass debounce 100 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete destroyed destroyed 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete disabled no pass appendToBody 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete disabled pass disabled is false 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete fetchSuggest pass fetchSuggest and value is array 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete fetchSuggest pass fetchSuggest and value not is array 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete focus event focus 1`] = `
VueWrapper {
  "_emitted": Object {
    "focus": Array [
      Array [
        FocusEvent {
          "isTrusted": true,
        },
      ],
    ],
  },
  "_emittedByOrder": Array [
    Object {
      "args": Array [
        FocusEvent {
          "isTrusted": true,
        },
      ],
      "name": "focus",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete input event input 1`] = `
VueWrapper {
  "_emitted": Object {
    "input": Array [
      Array [
        "test",
      ],
    ],
  },
  "_emittedByOrder": Array [
    Object {
      "args": Array [
        "test",
      ],
      "name": "input",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete placement no pass placement 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete placement pass placement is top 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete readonly no pass readonly 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete readonly pass readonly is false 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete round no pass round 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete round pass round is false 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete select event select 1`] = `
VueWrapper {
  "_emitted": Object {
    "input": Array [
      Array [
        "value",
      ],
    ],
    "select": Array [
      Array [
        Object {
          "value": "value",
        },
      ],
    ],
  },
  "_emittedByOrder": Array [
    Object {
      "args": Array [
        "value",
      ],
      "name": "input",
    },
    Object {
      "args": Array [
        Object {
          "value": "value",
        },
      ],
      "name": "select",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete size large size 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete size small size 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete slot append 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete slot prefix 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete slot prepend 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete slot suffix 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete user operation user input value out then click on the document then click input 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete value no pass value 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete value pass value is test 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete valueKey no pass valueKey 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete valueKey pass valueKey is text 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete visibleArrow no pass visibleArrow 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;

exports[`JAutocomplete visibleArrow pass visibleArrow is false 1`] = `
VueWrapper {
  "_emitted": Object {},
  "_emittedByOrder": Array [],
  "isFunctionalComponent": undefined,
}
`;
